<resources>
    <string name="app_name">EASY News</string>
    <string name="american_news">Амереканские Новости</string>
    <string name="russia_news">Русские Новости</string>
    <string name="germany_news">Немецкие Новости</string>
    <string name="egypt_news">Египетские Новости</string>
    <string name="day_tem">Дневная тема</string>
    <string name="night_tem">Ночная тема</string>
    <string name="add_article">Статья Добавлена</string>
    <string name="delete_article">Статья Удалена</string>
    <string name="update">Update</string>
    <string name="want_delete_down">Хотите удалить ?</string>
    <string name="news">News</string>
    <string name="my_news">Мои новости</string>
    <string name="main_news">General</string>
    <string name="sport">Sports</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="find">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="name">Стас Павленко</string>
    <string name="edit">Редоктировать</string>
    <string name="profile">Профиль</string>
    <string name="profile_tem">Тема профиля</string>
    <string name="notice">Обьявления.</string>
    <string name="welcome">welcome</string>
    <string name="author">Author</string>
    <string name="base_data">1 Августа 2022</string>
    <string name="title">TITLE</string>
    <string name="description">Description</string>
    <string name="change_name">Смена Имени</string>
    <string name="your_name">Ваше имя ?</string>
    <string name="save">Сохранить</string>
    <string name="mistake">Mistake</string>
    <string name="saved">Сохраненное</string>
    <string name="main">Основное</string>
    <string name="error">Some error</string>
    <string name="empty_list">You don\'t have save items</string>
    <string name="server_error">Server not available</string>
    <string name="api_error">Unauthorized, your API key is invalid</string>

    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with Email Address</string>
    <string name="terms_and_policy">By continuing, you agree to our &lt;a href=\"https://vroomvroom.store/en/content/termsandconditions\"&gt;Terms and Conditions&lt;/a&gt; and &lt;a href=\"https://vroomvroom.store/en/page/admin/privacypolicy\"&gt;Privacy Policy&lt;/a&gt;.</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_acc">Don’t have any account?</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Email</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="successful">successful</string>
    <string name="minimum_character">Minimum 6 Character Password</string>
    <string name="uppercase">Must Contain 1 Upper-case Character</string>
    <string name="lowercase">Must Contain 1 Lower-case Character</string>
    <string name="valid_email_false">Invalid Email Address</string>
    <string name="email">Email</string>
    <string name="required">required</string>
    <string name="sign">Sign In to account</string>
    <string name="forgot_password_text">Enter email address.</string>

    <!-- Error Strings -->
    <string name="error_check_internet_connection">Check Internet Connection</string>
    <string name="error_oops_error_occured">Oops!! An Error Occurred</string>
    <string name="unregistered">If you want to use this functions, please registered</string>
    <string name="error_registered">ERROR, If you want to use this functions, please registered</string>
    <string name="successes_registered">Successes Registered</string>
    <string name="authentication_failed">Authentication failed, Wrong email or password</string>
    <string name="wrong_email_password">Wrong Email or Password</string>
    <string name="title_title">Glad to see you. Check our news, it\'s easy to do</string>
    <string name="skip">skip</string>
    <string name="sign_up_here">If you have an account? Sign In here</string>
    <string name="create_account">Create Account.</string>
    <string name="exceptions">Exceptions</string>
    <string name="no_internet_connections">No Internet connections</string>
    <string name="empty_email">Email is empty</string>
    <string name="internet_connected">Online</string>
    <string name="internet_disconnected">Offline</string>
    <string name="disabled_back_press">Disabled Back Press</string>
    <string name="search">Поиск…</string>
    <string name="empty_password">Password is empty</string>
    <string name="empty_email_password">Email and Password is empty</string>
    <string name="successfully_sign_in">Sign In is successfully!</string>
    <string name="successfully_register">You are register successfully!</string>
    <string name="invalid_authentication">Invalid authentication</string>
    <string name="password_lengs">Authentication failed, Password should be at least 6 characters</string>
    <string name="invalid_email">Authentication failed, Invalid email entered</string>
    <string name="email_registered">Authentication failed, Email already registered.</string>
    <string name="email_sent">Email has been sent</string>
    <string name="wrong_email">Wrong Email</string>
    <string name="incorrect_email">Authentication failed, incorrect email</string>
    <string name="full_name">Full Name</string>
    <string name="different_password">Different Password</string>
    <string name="recover_email_title">You can recover your email here</string>
    <string name="recover_email">Recover email</string>
    <string name="not_enabled_yet">Not Enabled Yet</string>
    <string name="want_delete">ХОТИТЕ УДАЛИТЬ ?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>
    <string name="cant_return">без возврата</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="signin_signout">SignIn/SignOut</string>
    <string name="check_your_connections_and_try_again">Check your connections and try again</string>
    <string name="delete_all">Удалить всё ?</string>
    <string name="default_name">Default</string>
    <string name="type_for_switch">Нажмите, что бы переключить</string>
    <string name="old_news">Странна новостей?</string>
    <string name="version">Version 1.0</string>
    <string name="account">Account ?</string>
    <string name="want_sign_out">Do you, want to sign out?</string>
    <string name="ok">ok</string>
    <string name="often_request">The request was unacceptable, often due to a missing or misconfigured parameter.</string>
    <string name="many_request">You made too many requests</string>
    <string name="tabs_for_navigating">Tabs for navigating between different sections</string>

    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="logout">Sign Out</string>
    <string name="empty_field">"Поле пустое "</string>

    <string name="selection_state">Selected: %1$d out of %2$d</string>
    <string name="select_all">Select All</string>
</resources>
