<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_16"
    android:backgroundTint="@color/color_background"
    app:cardCornerRadius="@dimen/dp_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/are_you_sure"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_confirmation_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/you_re_about_to_sign_out_of_your_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_confirmation" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_sign_out_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:paddingHorizontal="@dimen/dp_8"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/logout"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_confirmation_message" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:paddingHorizontal="@dimen/dp_8"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/text_sign_out_action"
            app:layout_constraintEnd_toStartOf="@+id/text_sign_out_action"
            app:layout_constraintTop_toTopOf="@+id/text_sign_out_action" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
