<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screens.authentication.signin.SignInFragment">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/worksansbold"
        android:text="@string/app_name"
        android:textColor="@color/colorRedBackground"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_title"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_2"
        android:text="@string/sign"
        android:textColor="@color/grey_one"
        app:layout_constraintBottom_toTopOf="@+id/emailContainer"
        app:layout_constraintEnd_toEndOf="@+id/emailContainer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailContainer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:textColorHint="@color/grayDark"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/dp_10"
        app:boxCornerRadiusBottomStart="@dimen/dp_10"
        app:boxCornerRadiusTopEnd="@dimen/dp_10"
        app:boxCornerRadiusTopStart="@dimen/dp_10"
        app:boxStrokeColor="@color/colorRedBackground"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/grayDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.19"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/colorRedBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="14"
            android:textColor="@color/colorRedBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:textColorHint="@color/grayDark"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/dp_10"
        app:boxCornerRadiusBottomStart="@dimen/dp_10"
        app:boxCornerRadiusTopEnd="@dimen/dp_10"
        app:boxCornerRadiusTopStart="@dimen/dp_10"
        app:boxStrokeColor="@color/colorRedBackground"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/grayDark"
        app:layout_constraintEnd_toEndOf="@+id/emailContainer"
        app:layout_constraintStart_toStartOf="@+id/emailContainer"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorRedBackground"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/colorRedBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="14"
            android:textColor="@color/colorRedBackground" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/forgot_password"
        android:textColor="@color/grey_one"
        app:layout_constraintEnd_toEndOf="@+id/password_container"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/password_container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_container"
        app:layout_constraintTop_toBottomOf="@+id/bt_forgot_password" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/no_acc"
        android:textColor="@color/grey_one"
        app:layout_constraintEnd_toEndOf="@+id/btSignIn"
        app:layout_constraintStart_toStartOf="@+id/btSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

    <TextView
        android:id="@+id/bt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/no_account"
        android:textColor="@color/colorRedBackground"
        app:layout_constraintEnd_toEndOf="@+id/btSignIn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/log"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

    <TextView
        android:id="@+id/bt_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="43dp"
        android:text="@string/skip"
        android:textColor="@color/grey_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/log"
        app:layout_constraintTop_toBottomOf="@+id/bt_sign_up" />

    <ImageView
        android:id="@+id/title_icon"
        android:layout_width="@dimen/dp_34"
        android:layout_height="@dimen/dp_34"
        android:layout_marginEnd="@dimen/dp_4"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toStartOf="@+id/appTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appTitle" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_centerInParent="true"
        android:elevation="@dimen/dp_10"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btSignIn"
        app:layout_constraintEnd_toEndOf="@+id/btSignIn"
        app:layout_constraintStart_toStartOf="@+id/btSignIn"
        app:layout_constraintTop_toTopOf="@+id/btSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
